infrastructure-as-code/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infrastructure-as-code
  namespace: central-configuration
  labels:
    app: infrastructure-as-code
    component: central-config
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - infrastructure-as-code.central-config.exalt.com
    secretName: infrastructure-as-code-tls
  rules:
  - host: infrastructure-as-code.central-config.exalt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infrastructure-as-code
            port:
              number: 8185
